--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
       <div class="cover"></div>
       <span class="heart">♥</span>
       <p class="paper" id="mainMessage">
-        En este día especial de amor y amistad, celebremos los lazos que nos unen. Que la alegría y el cariño nos acompañen siempre. ¡Feliz día!
+        En est
+        
+        y el cariño nos acompañen siempre. ¡Feliz día!
       </p>
       <div class="letter"></div>
     </div>
