--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
       <div class="cover"></div>
       <span class="heart">♥</span>
       <p class="paper" id="mainMessage">
-        En est
-        
-        y el cariño nos acompañen siempre. ¡Feliz día!
+      Eres mi lugar favorito, mi paz y mi mayor fuente de felicidad. Cada momento a tu lado es un regalo que aprecio con el alma. Gracias por existir y por hacer mi mundo mejor. Te amo muchísimo 💖
       </p>
       <div class="letter"></div>
     </div>
