--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="cover"></div>
       <span class="heart">♥</span>
       <p class="paper" id="mainMessage">
-      Eres mi lugar favorito, mi paz y mi mayor fuente de felicidad. Cada momento a tu lado es un regalo que aprecio con el alma. Gracias por existir y por hacer mi mundo mejor. Te amo muchísimo 💖
+      Eres mi lugar favorito, mi paz y mi mayor fuente de felicidad. Cada momento a tu lado es un regalo. Gracias por existir y por hacer mi mundo mejor. Te amo pastelito💖
       </p>
       <div class="letter"></div>
     </div>
