--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <main>
     <div class="container-letter">
       <div class="cover"></div>
-      <span class="heart">♥</span>
+      <span class="heart">🌻</span>
       <p class="paper" id="mainMessage">
-      Eres mi lugar favorito, mi paz y mi mayor fuente de felicidad. Cada momento a tu lado es un regalo. Gracias por existir y por hacer mi mundo mejor. Te amo pastelito💖
+      Amor, contigo todo es mejor. Eres mi paz, mi felicidad y la persona con la que quiero estar siempre. Pastelito, te amo con mi vida💖🧁
       </p>
       <div class="letter"></div>
     </div>
